=== CHANGES: ameritrade ===


2018-08-24

  - Added example script to cancel all orders and implemented DELETE method.

  - Added readonly to scriptgs.open_with_dirs() function.

  - Added example script calculating various probability estimates.

  - Updated strangle options strategy example.


2018-08-22

  - Added a simple README file.


2018-08-20

  - Switched repository to non-publishing (continuous).

  - Added example short single call strategy.

  - Added ameritrade.scripts and default function add_script_args() and
    open_with_args() in order to make it easy to write lots of example scripts.


2018-08-14

  - Initial release.